--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,21 @@
-body {background-color: silver;}
-#btn, #content {
-	box-shadow: 3px 3px 5px black; 
+*{
+	padding: 0px; 
+	margin: 0px; 
 }
+body {
+	background-color: silver;
+	padding: 10px;
+}
+#btn, #content, #username {
+	box-shadow: 3px 3px 5px black; 
+	margin: 5px; 
+	padding: 3px 5px; 
+}
+#btn, #username {
+	display: inline-block;
+	max-width: 200px;
+}
+
 #content {
 	background-color: rgb(240,240,240); 
 	min-height: 100px; 
@@ -15,4 +29,4 @@ b {
 	background-color: yellow;
 	padding: 0px 5px; 
 }
-h2 {text-align: center;}	
+h2, .center {text-align: center;}	
